<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ferreirocorrea</groupId>
	<artifactId>backend_example</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>backend</name>
	<description>An example of backend project using liquibase, h2, spring boot, data and mvc</description>

	<modules>
		<module>domain</module>
		<module>rest</module>
		<module>integration-tests</module>
	</modules>

	<properties>

		<!-- Used to locate the profile specific configuration file. -->
		<build.profile.id>local</build.profile.id>
		<skip.integration.tests>true</skip.integration.tests>

		<spring-boot.version>1.2.6.RELEASE</spring-boot.version>
		<spring-security.version>3.2.1.RELEASE</spring-security.version>
		<spring.profiles.active>local</spring.profiles.active>

		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
		<maven-eclipse-plugin.version>2.8</maven-eclipse-plugin.version>
		<maven-resources-plugin.version>2.6</maven-resources-plugin.version>
		<maven-surefire-plugin.version>2.14</maven-surefire-plugin.version>

		<aspectj-maven-plugin.version>1.4</aspectj-maven-plugin.version>
		<hibernate.dialect>org.hibernate.dialect.H2Dialect</hibernate.dialect>
		<junit.version>4.12</junit.version>

	</properties>

	<dependencies>
		<!-- Spring Boot -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${spring-boot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<version>${spring-boot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
			<version>${spring-boot.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
			<version>${spring-boot.version}</version>
		</dependency>

		<!-- Spring Security -->
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-ldap</artifactId>
			<version>${spring-security.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-config</artifactId>
			<version>${spring-security.version}</version>
		</dependency>


		<!-- Spring Tests + JUnit -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>${spring-boot.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>


	</dependencies>

	<profiles>

		<profile>
			<id>local</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<!-- application.properties file -->
				<tomcat-uri-encoding>ISO-8859-1</tomcat-uri-encoding>
				<encoding-charset>ISO-8859-1</encoding-charset>
				<encoding-enabled>true</encoding-enabled>
				<encoding-force>true</encoding-force>

				<context-path>/backend</context-path>
				<management-security-enabled>false</management-security-enabled>
				<application-name>backend</application-name>

				<h2-console-enabled>true</h2-console-enabled>
				<driver-class>org.h2.Driver</driver-class>
				<jdbc-url>jdbc:h2:mem:test;MODE=Oracle;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</jdbc-url>
				<db-username>sa</db-username>
				<db-password></db-password>
				<db-name>h2</db-name>
				<db-showSql>false</db-showSql>
				<hibernate-ddl>auto</hibernate-ddl>

				<ldap-url>ldap://ldapServer</ldap-url>
				<ldap-base>ou=CORP,dc=ferreiro_correa</ldap-base>
				<ldap-userDn>ldapUser</ldap-userDn>
				<ldap-password>ldapPassword</ldap-password>
				<!-- application.properties file -->

				<enviroment>local</enviroment>
			</properties>
		</profile>

		<profile>
			<id>dev</id>
			<properties>
				<!-- application.properties file -->
				<tomcat-uri-encoding>ISO-8859-1</tomcat-uri-encoding>
				<encoding-charset>ISO-8859-1</encoding-charset>
				<encoding-enabled>true</encoding-enabled>
				<encoding-force>true</encoding-force>

				<context-path>/backend</context-path>
				<management-security-enabled>false</management-security-enabled>
				<application-name>backend</application-name>

				<h2-console-enabled>true</h2-console-enabled>
				<driver-class>org.h2.Driver</driver-class>
				<jdbc-url>jdbc:h2:mem:test;MODE=Oracle;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</jdbc-url>
				<db-username>sa</db-username>
				<db-password></db-password>
				<db-name>h2</db-name>
				<db-showSql>false</db-showSql>
				<hibernate-ddl>auto</hibernate-ddl>

				<ldap-url>ldap://ldapServer</ldap-url>
				<ldap-base>ou=CORP,dc=ferreiro_correa</ldap-base>
				<ldap-userDn>ldapUser</ldap-userDn>
				<ldap-password>ldapPassword</ldap-password>
				<!-- application.properties file -->

				<enviroment>dev</enviroment>
				<skip.integration.tests>false</skip.integration.tests>
			</properties>
		</profile>

	</profiles>

	<build>
		<plugins>

			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring-boot.version}</version>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<failOnMissingWebXml>false</failOnMissingWebXml>
				</configuration>
			</plugin>

			<plugin>
				<!-- Separates the unit tests from the integration tests. -->
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<!-- Skip the default running of this plug-in (or everything is run
						twice...see below) -->
					<skip>true</skip>
					<!-- Show 100% of the lines from the stack trace (doesn't work) -->
					<trimStackTrace>false</trimStackTrace>
					<forkCount>1</forkCount>
					<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
					<reuseForks>true</reuseForks>
				</configuration>
				<executions>
					<execution>
						<id>unit-tests</id>
						<phase>test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<!-- Never skip running the tests when the test phase is invoked -->
							<skip>${skip.unit.tests}</skip>
							<excludes>
								<exclude>**/*IntegrationTest*.java</exclude>
							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>integration-tests</id>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<!-- Never skip running the tests when the integration-test phase
								is invoked -->
							<skip>${skip.integration.tests}</skip>
							<includes>
								<include>**/*IntegrationTest*.java</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>
